# Linux-Link

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIX_PLAN.md  GEMINI.md  LICENSE  README.md  SECURITY_NOTICE.md  config.toml.example  docker-compose.yml  linux-link.service  plan.md  test_api.py  v2_TODO.md  v2_blueprint.html
.github/ISSUE_TEMPLATE/: bug_report.md  contributor.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/linux-link-enhancement/: design.md  requirements.md  tasks.md
android/: .flutter-plugins-dependencies  frb_config.yaml  pubspec.yaml
android-client/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
android-client/app/: build.gradle.kts  proguard-rules.pro
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/linuxlink/: MainActivity.kt
android-client/app/src/main/java/com/linuxlink/config/: AppConfig.kt
android-client/app/src/main/java/com/linuxlink/security/: SecurityManager.kt
android-client/app/src/main/java/com/linuxlink/ui/: FilesScreen.kt  LinuxLinkApp.kt  LoginScreen.kt  MonitorScreen.kt  SettingsScreen.kt  TerminalScreen.kt  VoiceScreen.kt
android-client/app/src/main/res/values/: strings.xml  themes.xml
android-client/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/.dart_tool/: package_config.json  package_graph.json
android/.dart_tool/build_resolvers/: sdk.sum  sdk.sum.deps
android/.dart_tool/flutter_build/: dart_plugin_registrant.dart
android/.dart_tool/flutter_build/5e4e9b6944e8cb656da0af3d227d70ab/: .filecache  android_aot_bundle_release_android-arm.stamp  android_aot_bundle_release_android-arm64.stamp  android_aot_bundle_release_android-x64.stamp  android_aot_release_android-arm.stamp  android_aot_release_android-arm64.stamp  android_aot_release_android-x64.stamp  aot_android_asset_bundle.stamp  app.dill  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
android/.dart_tool/flutter_build/744238209f34602cca59f8f182582a56/: .filecache  app.dill  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
android/android/: .gitignore  gradlew  settings.gradle
android/android/app/: build.gradle
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/lib/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  lib.freezed.dart  main.dart  rust_api_bridge.dart
android/lib/models/: monitor_info.dart  peer_info.dart  remote_file.dart
android/lib/providers/: bookmarks_provider.dart  connection_provider.dart  health_provider.dart  streaming_provider.dart
android/lib/screens/: connection_history_screen.dart  connection_screen.dart  file_browser_screen.dart  lock_screen.dart  remote_desktop_screen.dart  settings_screen.dart  terminal_screen.dart  trust_screen.dart
android/lib/services/: audio_service.dart  background_service.dart  clipboard_service.dart  clipboard_sync_service.dart  gamepad_service.dart  history_service.dart  notification_service.dart  recording_service.dart  video_player_service.dart
android/lib/widgets/: peer_list_tile.dart  shortcuts_overlay.dart  stream_stats_overlay.dart
android/rust/: Cargo.toml
android/rust/src/: api.rs  frb_generated.rs  lib.rs
aur/: PKGBUILD  linux-link.install
backend-api/: Dockerfile  README.md  automation_engine.py  desktop_controller.py  error_handler.py  file_manager.py  main.py  media_controller.py  monitoring.py  package_manager.py  performance.py  pytest.ini  remote_desktop.py  requirements-test.txt  requirements.txt  security.py  voice_processor.py
backend-api/adapters/: __init__.py  fallback_adapter.py  hyprland_adapter.py  i3_adapter.py  i3_sway_adapter.py  sway_adapter.py
backend-api/tests/: conftest.py  test_api_endpoints.py  test_file_manager.py  test_integration.py  test_monitoring.py  test_security.py
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/input/: mod.rs
core/src/protocol/: backoff.rs  connection.rs  connection_test.rs  kdeconnect.rs  kdeconnect_test.rs  mod.rs  v2.rs
core/src/streaming/: audio.rs  audio_capture.rs  bitrate.rs  capture.rs  capture_x11.rs  chaos.rs  client.rs  encoder.rs  encoder_detect.rs  input_packet.rs  mod.rs  session.rs  streamer.rs  transport.rs
core/src/tailscale/: discovery.rs  lan.rs  mod.rs  wol.rs
core/tests/: chaos_integration.rs  protocol_integration.rs  reconnect_storm_test.rs  video_flood_test.rs
docs/: API.md  ARCHITECTURE.md  SECURITY.md  SETUP.md  development-setup.md
docs/superpowers/plans/: 2025-05-23-protocol-v2-fundamentals.md  2026-04-10-phase4-android-client.md  2026-04-11-phase5-polish-extras.md  2026-04-11-phase6-release-packaging.md  2026-05-14-phase7-next-gen-features.md  2026-05-15-phase8-close-the-gaps.md  2026-05-16-protocol-v2-optimizations.md  2026-05-23-chaos-proxy.md  2026-05-23-v2-unified-multiplexer-phase1.md
docs/superpowers/specs/: 2025-05-23-protocol-v2-fundamentals-design.md  2026-04-10-phase4-android-client-design.md  2026-04-11-phase5-polish-extras-design.md  2026-04-11-phase6-release-packaging-design.md  2026-05-23-mirroring-optimization-design.md  2026-05-23-protocol-spec-v1-v2.md  2026-05-23-stream-fairness-and-chaos.md
man/: linux-link.1
scripts/: install.sh
server/: Cargo.toml
server/src/: cli.rs  config.rs  input_injector.rs  kde.rs  lib.rs  main.rs  notification_monitor.rs  service.rs  v2_multiplexer.rs
server/src/plugins/: battery.rs  clipboard.rs  exec.rs  file_browse.rs  input.rs  mod.rs  monitors.rs  notification.rs  power.rs  share.rs
server/tests/: plugin_integration.rs  v2_multiplexer_integration.rs
(+7 files in other folders)
