[workspace]
resolver = "2"
members = [
    "core",
    "server",
    "android/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "process", "sync", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# XDG Desktop Portal (screen capture, input)
ashpd = { version = "0.13", features = ["screencast", "tokio"] }

# Video encoding
ffmpeg-sidecar = { version = "2.5", default-features = false, features = [] }

# QUIC streaming
quinn = "0.11"

# TLS and certificates for QUIC
rcgen = "0.14"
rustls = "0.23"

# Input handling
enigo = "0.6"

# UUID
uuid = { version = "1", features = ["v4"] }

# Async trait
async-trait = "0.1"

# PipeWire screen capture
pipewire = "0.9"
libspa = "0.9"
tokio-util = "0.7"

# Unix-specific utilities
libc = "0.2"
