[package]
name = "linux-link-core"
version.workspace = true
edition.workspace = true

[features]
default = ["server"]

# Linux server features
server = ["capture", "encode", "injection"]
capture = ["dep:ashpd", "dep:pipewire", "dep:libspa", "dep:x11rb", "dep:xcap", "wayland-portal"]
encode = ["dep:ffmpeg-sidecar"]
injection = ["dep:evdev"]
wayland-portal = ["ashpd?/screencast"]
x11-capture = ["dep:xcap"]

# Client-only (Android) features
client = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true

# Screen capture (Linux-only, optional)
ashpd = { workspace = true, optional = true }
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }
x11rb = { version = "0.13", features = ["shm"], optional = true }
tokio-util.workspace = true

# Audio encoding
opus.workspace = true

# Video encoding (Linux-only, optional)
ffmpeg-sidecar = { workspace = true, optional = true }

# mDNS service discovery
mdns-sd = "0.13"

# Certificate hashing for TOFU verification
sha2 = "0.10"

# Unix-specific utilities
libc.workspace = true

# QUIC streaming
quinn.workspace = true

# TLS and certificates for QUIC
rcgen.workspace = true
rustls.workspace = true

# X11 screen capture fallback (optional)
xcap = { workspace = true, optional = true }

# Input injection via uinput (Linux-only, optional)
evdev = { workspace = true, optional = true }

# Directories / home paths
dirs.workspace = true
