[package]
name = "linux-link-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "linux-link"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
linux-link-core = { path = "../core" }
serde.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
toml = "0.8"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# Input handling
enigo.workspace = true

# D-Bus for notifications, battery
zbus.workspace = true

# Input injection via uinput (universal fallback)
evdev.workspace = true
