[package]
name = "linux-link-server"
version.workspace = true
edition.workspace = true

[lib]
name = "linux_link_server"
path = "src/lib.rs"

[[bin]]
name = "linux-link"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
linux-link-core = { path = "../core" }
serde.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
toml = "0.8"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# Input handling
enigo.workspace = true

# D-Bus for notifications, battery
zbus.workspace = true

# Input injection via uinput (universal fallback)
evdev.workspace = true

# QUIC streaming
quinn.workspace = true

# Cancellation tokens and utilities
tokio-util.workspace = true

# UUID for persistent device ID
uuid.workspace = true
dashmap = "6.1.0"
xcap.workspace = true
