[package]
name = "linux-link-android"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
linux-link-core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quinn = "0.11"
tokio-util = "0.7"
